--- a/endGameProject/programming-endgame/public/index.css
+++ b/endGameProject/programming-endgame/public/index.css
@@ -3,3 +3,17 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body{
+    background-color: rgba(0,0,0,0.8);
+    display: inline;
+}
+
+header {
+    display: block;
+    text-align: center;
+    padding: 20px;
+    color: silver;
+    font-weight: bold;
+    font-size: large;
+}
